cwltool (1.0.20161207161158-1) UNRELEASED; urgency=medium

  * Team upload

  [ Michael R. Crusoe ]
  * New upstream release 

  [ Andreas Tille ]
  * Add missing Build-Depends: python-keepalive
    Closes: #845982
  * d/watch: version=4
  * debhelper 10
  * Add python-typing as Build-Depends and comment patch to skip it

 -- Andreas Tille <tille@debian.org>  Fri, 09 Dec 2016 10:33:42 +0100

cwltool (1.0.20160209222805-1) unstable; urgency=medium

  * Initial release. (Closes: #814000)

 -- Michael R. Crusoe <crusoe@ucdavis.edu>  Mon, 22 Feb 2016 21:22:21 +0100